--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
+    <link rel="icon" href="./Logo.png" type="image/icon">
     <title>RMM Construction</title>
   </head>
   <body>
